--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div class = "titre-section">
                     <div id = "skill"><h2>COMPETENCES</h2></div>
                 </div>
-                <p>C, C++, Python, Java, HTML, CSS, Javascript<br/></p>
+                <p>C, C++, Python, Java, HTML, CSS, Javascript, PHP<br/></p>
                 
                 <p>Linux, MySQL, Git, PostgreSQL, Flask<br/></p>
                 
